SEC: Implementar RBAC, forzar rol USER en registro y proteger endpoints administrativos